tests/ui/feature-gates/issue-43106-gating-of-bench.stderr
error: `bench` attribute cannot be used at crate level
  --> $DIR/issue-43106-gating-of-bench.rs:6:1
   |
LL | #![bench = "4100"]
   | ^^^^^^^^^^^^^^^^^^
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![bench = "4100"]
LL + #[bench = "4100"]
   |

error: aborting due to 1 previous error

